--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "underscore": "~1.6.0",
     "moment": "~2.8.1",
     "request": "~2.39.0",
-    "cheerio": "~0.17.0"
+    "cheerio": "~0.17.0",
+    "async": "~0.9.0"
   }
 }
