--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "itcreport": "./bin/cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -35,5 +35,10 @@
     "request": "~2.39.0",
     "cheerio": "~0.17.0",
     "async": "~0.9.0"
+  },
+  "devDependencies": {
+    "mocha": "~1.21.0",
+    "should": "~4.0.4",
+    "yuidocjs": "~0.3.50"
   }
 }
